@@ -1,3 +1,7 @@
+2009-01-22 Frank Naegler  <typo3@naegler.net>
+
+	* add some new marker for invitation mails 
+
 2008-12-17 Frank Naegler  <typo3@naegler.net>
 
 	* add id to the settings in the privacy view 
